# car_control

./: CMakeLists.txt  README.md
config/: power_diagram_gains.yaml
include/car_control/: power_diagram_controller.hpp
launch/: racecar_controller.launch  scarab_control.launch  scarab_controller.launch
power_diagram_controller/: CMakeLists.txt  package.xml
power_diagram_controller/launch/: racecar_controller.launch
power_diagram_controller/rviz/: racecar01.cfg.rviz
rviz/: scarab40.cfg.rviz  scarab40_astar.cfg.rviz
scripts/: cmd_vel_to_ackermann_drive.py
src/: dd_control_node.cpp  power_diagram_controller.cpp  power_diagram_controller_node.cpp  power_diagram_node.cpp
